--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -3823,7 +3823,7 @@
   if (which_alternative == 1)
      return \"#\";
 
-  /* If the bitfield being tested fits in the upper or lower half of a
+  /* If the bit-field being tested fits in the upper or lower half of a
      word, it is possible to use andiu. or andil. to test it.  This is
      useful because the condition register set-use delay is smaller for
      andi[ul]. than for rlinm.  This doesn't work when the starting bit
@@ -3883,7 +3883,7 @@
      return \"#\";
 
   /* Since we are using the output value, we can't ignore any need for
-     a shift.  The bitfield must end at the LSB.  */
+     a shift.  The bit-field must end at the LSB.  */
   if (start >= 16 && start + size == 32)
     {
       operands[3] = GEN_INT ((1 << size) - 1);
