--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-24  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* real.h (real_value): Make `exp' explicitly signed.
+
 2002-09-24  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/elfos.h: Follow spelling conventions.
