s390.c (preferred_la_operand_p): New function.
	* config/s390/s390.c (preferred_la_operand_p): New function.
	* config/s390/s390-protos.h (preferred_la_operand_p): Declare it.
	* config/s390/s390.md ("addaddr_esame", "*la_ccclobber"): Replace by ...
	("*la_64_cc", "*la_31_cc", splitters): ... these.
	("*la_31"): Deactivate for TARGET_64BIT.
	("*la_31_and", "*la_31_and_cc"): New.

From-SVN: r57473

--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -2797,20 +2797,24 @@
 ; adddi3 instruction pattern(s).
 ;
 
-(define_insn "addaddr_esame"
-  [(set (match_operand:DI 0 "register_operand" "=a,a")
-        (plus:DI (match_operand:DI 1 "register_operand" "%a,a")
-                 (match_operand:DI 2 "nonmemory_operand" "J,a")))]
-  "TARGET_64BIT && (((REGNO (operands[1]) == STACK_POINTER_REGNUM ) ||
-     (REGNO (operands[1]) == BASE_REGISTER)) && 
-	(GET_CODE (operands[2]) == REG ||
-	 CONST_OK_FOR_LETTER_P (INTVAL (operands[2]),'J')))"
-  "@
-   la\\t%0,%c2(,%1)
-   la\\t%0,0(%1,%2)"
-  [(set_attr "op_type" "RX")
-   (set_attr "atype"   "mem")
-   (set_attr "type"    "la")])
+(define_insn "*la_64_cc"
+  [(set (match_operand:DI 0 "register_operand" "=d")
+        (match_operand:QI 1 "address_operand"  "p"))
+   (clobber (reg:CC 33))]
+  "TARGET_64BIT
+   && preferred_la_operand_p (operands[1], 1)"
+  "#"
+  [(set_attr "op_type"  "RX")
+   (set_attr "atype"    "mem")
+   (set_attr "type"     "la")])
+
+(define_split
+  [(set (match_operand:DI 0 "register_operand" "")
+        (match_operand:QI 1 "address_operand" ""))
+   (clobber (reg:CC 33))]
+  "TARGET_64BIT && reload_completed
+   && preferred_la_operand_p (operands[1], 0)"
+  [(set (match_dup 0) (match_dup 1))])
 
 (define_insn "*adddi3_sign"
   [(set (match_operand:DI 0 "register_operand" "=d,d")
@@ -2997,15 +3001,24 @@
 ; addsi3 instruction pattern(s).
 ;
 
-(define_insn "*la_ccclobber"
+(define_insn "*la_31_cc"
   [(set (match_operand:SI 0 "register_operand" "=d")
         (match_operand:QI 1 "address_operand"  "p"))
    (clobber (reg:CC 33))]
-  "legitimate_la_operand_p (operands[1])"
-  "la\\t%0,%a1"
-   [(set_attr "op_type"  "RX")
-    (set_attr "atype"    "mem")
-    (set_attr "type"     "la")])
+  "!TARGET_64BIT
+   && preferred_la_operand_p (operands[1], 1)"
+  "#"
+  [(set_attr "op_type"  "RX")
+   (set_attr "atype"    "mem")
+   (set_attr "type"     "la")])
+
+(define_split
+  [(set (match_operand:SI 0 "register_operand" "")
+        (match_operand:QI 1 "address_operand" ""))
+   (clobber (reg:CC 33))]
+  "!TARGET_64BIT && reload_completed
+   && preferred_la_operand_p (operands[1], 0)"
+  [(set (match_dup 0) (match_dup 1))])
 
 (define_insn "*addsi3_imm_cc"
   [(set (reg 33) 
@@ -3149,8 +3162,33 @@
 (define_insn "*la_31"
   [(set (match_operand:SI 0 "register_operand" "=d")
         (match_operand:QI 1 "address_operand" "p"))]
-  "legitimate_la_operand_p (operands[1])"
+  "!TARGET_64BIT && legitimate_la_operand_p (operands[1])"
   "la\\t%0,%a1"
+  [(set_attr "op_type"  "RX")
+   (set_attr "atype"    "mem")
+   (set_attr "type"     "la")])
+
+(define_insn "*la_31_and"
+  [(set (match_operand:SI 0 "register_operand" "=d")
+        (and:SI (match_operand:QI 1 "address_operand" "p")
+                (const_int 2147483647)))]
+  "!TARGET_64BIT"
+  "la\\t%0,%a1"
+  [(set_attr "op_type"  "RX")
+   (set_attr "atype"    "mem")
+   (set_attr "type"     "la")])
+
+(define_insn_and_split "*la_31_and_cc"
+  [(set (match_operand:SI 0 "register_operand" "=d")
+        (and:SI (match_operand:QI 1 "address_operand" "p")
+                (const_int 2147483647)))
+   (clobber (reg:CC 33))]
+  "!TARGET_64BIT"
+  "#"
+  "&& reload_completed"
+  [(set (match_dup 0) 
+        (and:SI (match_dup 1) (const_int 2147483647)))]
+  ""
   [(set_attr "op_type"  "RX")
    (set_attr "atype"    "mem")
    (set_attr "type"     "la")])
