--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-24  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/s390.c (preferred_la_operand_p): New function.
+	* config/s390/s390-protos.h (preferred_la_operand_p): Declare it.
+	* config/s390/s390.md ("addaddr_esame", "*la_ccclobber"): Replace by ...
+	("*la_64_cc", "*la_31_cc", splitters): ... these.
+	("*la_31"): Deactivate for TARGET_64BIT.
+	("*la_31_and", "*la_31_and_cc"): New.
+
 2002-09-24  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* real.h (real_value): Make `exp' explicitly signed.
