(thumb_unexpanded_epilogue): Don't generate epilogue for naked functions.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57476 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,9 @@
 2002-09-24  Adam Nemet  <anemet@lnxw.com>
+
+        * config/arm/arm.c (thumb_unexpanded_epilogue): Don't generate
+        epilogue for naked functions.
+
+2002-09-24  Adam Nemet  <anemet@lnxw.com>
             Nick Clifton  <nickc@redhat.com>
 
 	* config/arm/arm.h (THUMB_FUNCTION_PROFILER): Remove.
