--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-24  Denis Chertykov  <denisc@overta.ru>
+
+	* config/ip2k/ip2k.c (function_epilogue): Fix wrong numbers in
+	cases of optimizing "add sp,w" to "inc sp".
+
 2002-09-24  Adam Nemet  <anemet@lnxw.com>
 
         * config/arm/arm.c (thumb_unexpanded_epilogue): Don't generate
