--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-25  Richard Henderson  <rth@redhat.com>
+
+	* gcc.c-torture/execute/ieee/20010226-1.c: Early exit for
+	too-small long double.
+
 2002-09-23  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.dg/20020919-1.c: New test.
