--- a/boehm-gc/ChangeLog
+++ b/boehm-gc/ChangeLog
@@ -1,6 +1,6 @@
 2002-08-23  Adam Megacz <adam@xwt.org>
 
-        * Removed extraneous ABORT()
+        * win32_threads.cc: Removed extraneous ABORT()
 
 2002-08-14  Release Manager
 
