--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-25  Mark Mitchell  <mark@codesourcery.com>
+
+	* doc/invoke.texi: Add more -Wabi examples.
+
 2002-09-25  Richard Sandiford  <rsandifo@redhat.com>
 
 	* config/mips/mips.h (TARGET_MIPS4100): Add missing bracket.
