* resolve.cc: Include StringBuffer. 	(_Jv_ResolvePoolEntry): Use StringBuffer to create error string.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57515 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2002-09-25  Tom Tromey  <tromey@redhat.com>
 
+	* resolve.cc: Include StringBuffer.
+	(_Jv_ResolvePoolEntry): Use StringBuffer to create error string.
+
 	* boehm.cc (_Jv_MarkObj): Don't fail if class object has been
 	allocated but not initialized.
 
