--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,12 @@
 2002-09-25  Tom Tromey  <tromey@redhat.com>
 
+	* java/lang/natClassLoader.cc: 
+	(_Jv_PrepareCompiledClass): Throw NoClassDefFoundError, per spec.
+	* resolve.cc: Include NoClassDefFoundError.h, not
+	ClassNotFoundException.h.
+	(_Jv_ResolvePoolEntry): Throw NoClassDefFoundError, per spec.
+	* defineclass.cc: Don't include ClassNotFoundException.h.
+
 	* resolve.cc: Include StringBuffer.
 	(_Jv_ResolvePoolEntry): Use StringBuffer to create error string.
 
