--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-25  Jesse Rosenstock  <jmr@ugcs.caltech.edu>
+
+	* resolve.cc (_Jv_ResolvePoolEntry) [end_of_method_search]: Check
+	to see if `the_method == 0' before looking up vtable index.
+	Fixes PR libgcj/7709.
+
 2002-09-25  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/natClassLoader.cc: 
@@ -5,6 +11,7 @@
 	* resolve.cc: Include NoClassDefFoundError.h, not
 	ClassNotFoundException.h.
 	(_Jv_ResolvePoolEntry): Throw NoClassDefFoundError, per spec.
+
 	* defineclass.cc: Don't include ClassNotFoundException.h.
 
 	* resolve.cc: Include StringBuffer.
