--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-25  Richard Henderson  <rth@redhat.com>
+
+	* emit-rtl.c (const_double_htab_eq): Distinguish integer and
+	fp CONST_DOUBLE; use real_identical.
+
 2002-09-25  Mark Mitchell  <mark@codesourcery.com>
 
 	* doc/invoke.texi: Add more -Wabi examples.
