--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -42,6 +42,22 @@
 	* tree.c: Likewise.
 	* typeck.c: Likewise.
 
+2002-09-18  Devang Patel  <dpatel@apple.com>
+
+	* cp/cp-tree.h: New prototype for walk_vtabls().
+	* cp/decl.c (walk_vtables_r): New function.
+	(struct cp_binding_level): Add new members, namespaces,
+	names_size and vtables.
+	(add_decl_to_level): Add decl in namespaces or vtables
+	chain, if conditions match.
+	(walk_vtables): New function.
+	(walk_namespaces_r): Travers separate namespace chain
+	for namespace decls.
+	(wrapup_globals_for_namespace): Use names_size instead
+	of list_length().
+	* cp/decl2.c (finish_file): Use walk_vtables() instead of
+	walk_globals() to walk vtable decls.
+
 2002-09-18  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* decl.c (grokdeclarator): Use assert, not internal_error. Don't
