--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2002-09-26  Richard Earnshaw  <rearnsha@arm.com>
+
+	* lib/gcc.exp (gcc_init): Use a filename for the testglue that is
+	unique to the tool.
+	* lib/g77.exp (g77_init): Likewise.
+	* lib/g++.exp (g++_init): Likewise.
+	* lib/objc.exp (objc_init): Likewise.
+
 2002-09-25  Mark Mitchell  <mark@codesourcery.com>
 
 	* gcc/testsuite/g++.dg/abi/empty5.C: New test.
