--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-25  David S. Miller  <davem@redhat.com>
+
+	PR target/7842
+	* gcc.c-torture/execute/shiftdi.c: New test.
+
 2002-09-26  Richard Earnshaw  <rearnsha@arm.com>
 
 	* lib/gcc.exp (gcc_init): Use a filename for the testglue that is
