--- a/gcc/ChangeLog.1
+++ b/gcc/ChangeLog.1
@@ -13371,7 +13371,7 @@ Sun Sep 13 08:13:39 1998  Ben Elliston  <bje@cygnus.com>
 	runtime library will do this.
 
 	* objc/Make-lang.in: Do not build the runtime library or install
-	the Objective C header files.  The Makefile for the runtime
+	the Objective-C header files.  The Makefile for the runtime
 	library will do this.
 
 	* objc/Makefile.in (all.indirect): Only build the front-end.
