--- a/gcc/ChangeLog.4
+++ b/gcc/ChangeLog.4
@@ -9445,7 +9445,7 @@ Thu 07-Sep-2000 21:29:00 BST  Neil Booth  <NeilB@earthling.net>
 	yy_lim, or yy_get_token.  Don't define get_directive_line if
 	USE_CPPLIB.
 	* c-common.h: Add multiple include guard.  Define RID values
-	for every keyword in C, C++, and Objective C.  Put all the
+	for every keyword in C, C++, and Objective-C.  Put all the
 	modifiers first.
 	(struct c_fileinfo, get_fileinfo, dump_time_statistics): New.
 	* c-decl.c (c_decode_option): Handle -lang-objc here.
