--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-26  Miles Bader  <miles@gnu.org>
+
+	* v850.md ("length"): Change default value to 4.
+
 2002-09-26  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* ChangeLog.1: Follow spelling conventions.
