--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-26  Janis Johnson  <janis187@us.ibm.com>
+
+	* README.QMTEST: Fix typo.
+
 2002-09-26  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* gcc.dg/20020926-1.c: New test.
